Refine practice dashboard layout and styling

--- a/index.html
+++ b/index.html
@@ -543,12 +543,12 @@
     .practice-dashboard.goal-modal .modal-card{ padding:0; background:transparent; box-shadow:none; border:0; }
     .practice-dashboard__card{
       position:relative;
-      width:min(1080px,calc(100vw - 2rem));
+      width:min(980px,calc(100vw - 2.5rem));
       max-height:min(94vh,820px);
       display:flex;
       flex-direction:column;
       gap:1.4rem;
-      padding:1.75rem clamp(1.35rem,3vw,2.15rem) 1.9rem;
+      padding:1.65rem clamp(1.35rem,3vw,2rem) 1.8rem;
       background:#fff;
       border:1px solid var(--dashboard-border);
       border-radius:1.5rem;
@@ -560,19 +560,54 @@
       flex-wrap:wrap;
       align-items:flex-start;
       justify-content:space-between;
-      gap:1rem;
-      padding:0 0 1.1rem;
+      gap:1.25rem;
+      padding:0 0 1.05rem;
       border-bottom:1px solid rgba(148,163,184,.4);
     }
-    .practice-dashboard__title{ font-size:1.35rem; font-weight:700; color:#111827; letter-spacing:-.01em; }
+    .practice-dashboard__title-group{ display:flex; flex-direction:column; gap:.35rem; max-width:min(420px,100%); }
+    .practice-dashboard__eyebrow{ font-size:.72rem; text-transform:uppercase; letter-spacing:.14em; color:#64748B; font-weight:700; }
+    .practice-dashboard__title{ font-size:1.42rem; font-weight:700; color:#111827; letter-spacing:-.01em; }
+    .practice-dashboard__subtitle{ font-size:.92rem; color:#475569; line-height:1.45; }
     .practice-dashboard__header-actions{ display:flex; align-items:center; gap:.65rem; flex-wrap:wrap; justify-content:flex-end; padding-top:.15rem; }
     .practice-dashboard__close{ border-color:transparent; background:rgba(148,163,184,.16); color:#0f172a; transition:background .15s ease, transform .15s ease; }
     .practice-dashboard__close:hover{ background:rgba(148,163,184,.26); transform:translateY(-1px); }
     .practice-dashboard__close:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
-    .practice-dashboard__body{ flex:1 1 auto; overflow-y:auto; padding-right:.25rem; margin-right:-.25rem; display:flex; flex-direction:column; gap:1.35rem; }
     .practice-dashboard__section{ display:flex; flex-direction:column; gap:1rem; background:#fff; border:1px solid rgba(148,163,184,.32); border-radius:1.2rem; padding:1.35rem clamp(1rem,2.6vw,1.6rem); box-shadow:0 20px 40px rgba(15,23,42,.1); overflow:hidden; }
     .practice-dashboard__section-head{ display:flex; align-items:flex-start; justify-content:space-between; gap:.75rem; flex-wrap:wrap; padding-bottom:.85rem; border-bottom:1px solid rgba(226,232,240,.9); }
     .practice-dashboard__section-title{ font-weight:700; font-size:1.05rem; color:#111827; letter-spacing:-.01em; }
+    .practice-dashboard__section-subtitle{ font-size:.85rem; color:#64748B; margin-top:.2rem; }
+    .practice-dashboard__body{ flex:1 1 auto; overflow-y:auto; padding-right:.25rem; margin-right:-.25rem; display:flex; flex-direction:column; gap:1.5rem; }
+    .practice-dashboard__layout{ display:grid; grid-template-columns:minmax(0,1.1fr) minmax(0,.9fr); gap:1.35rem; align-items:flex-start; }
+    .practice-dashboard__aside{ display:flex; flex-direction:column; gap:1.1rem; }
+    .practice-dashboard__summary{ display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:.85rem; }
+    .practice-dashboard__summary-card{ display:flex; flex-direction:column; gap:.35rem; padding:1.1rem 1.2rem; border-radius:1.1rem; background:linear-gradient(160deg, rgba(59,130,246,.1) 0%, rgba(14,165,233,.12) 55%, rgba(14,165,233,.08) 100%); border:1px solid rgba(148,163,184,.28); box-shadow:0 16px 32px rgba(15,23,42,.12); }
+    .practice-dashboard__summary-value{ font-size:1.55rem; font-weight:700; color:#0f172a; letter-spacing:-.01em; }
+    .practice-dashboard__summary-label{ font-size:.78rem; text-transform:uppercase; letter-spacing:.08em; color:#475569; font-weight:600; }
+    .practice-dashboard__insights{ display:flex; flex-direction:column; gap:1rem; padding:1.25rem 1.35rem; border-radius:1.2rem; background:#fff; border:1px solid rgba(148,163,184,.28); box-shadow:0 18px 38px rgba(15,23,42,.12); }
+    .practice-dashboard__insights-head{ display:flex; flex-direction:column; gap:.35rem; }
+    .practice-dashboard__insights-title{ font-size:1.02rem; font-weight:700; color:#0f172a; }
+    .practice-dashboard__insights-meta{ font-size:.8rem; color:#64748B; }
+    .practice-dashboard__insights-list{ list-style:none; padding:0; margin:0; display:grid; gap:.85rem; }
+    .practice-dashboard__insight{ display:grid; grid-template-columns:auto 1fr; gap:.75rem; align-items:flex-start; padding:.85rem; border-radius:1.1rem; background:#f8fafc; border:1px solid rgba(148,163,184,.25); box-shadow:0 14px 30px rgba(15,23,42,.1); }
+    .practice-dashboard__insight-icon{ width:2.1rem; height:2.1rem; border-radius:999px; display:flex; align-items:center; justify-content:center; font-size:1.1rem; background:rgba(79,70,229,.12); color:#4338ca; }
+    .practice-dashboard__insight-icon[data-status="ok"]{ background:rgba(34,197,94,.15); color:#166534; }
+    .practice-dashboard__insight-icon[data-status="mid"]{ background:rgba(250,204,21,.18); color:#b45309; }
+    .practice-dashboard__insight-icon[data-status="ko"]{ background:rgba(248,113,113,.2); color:#b91c1c; }
+    .practice-dashboard__insight-icon[data-status="na"]{ background:rgba(148,163,184,.22); color:#1f2937; }
+    .practice-dashboard__insight-content{ display:flex; flex-direction:column; gap:.35rem; }
+    .practice-dashboard__insight-title{ font-weight:600; font-size:.95rem; color:#0f172a; }
+    .practice-dashboard__insight-meta{ font-size:.78rem; color:#64748B; text-transform:uppercase; letter-spacing:.08em; }
+    .practice-dashboard__insight-text{ font-size:.85rem; color:#475569; line-height:1.5; margin:0; }
+    .practice-dashboard__insights-empty{ margin:0; font-size:.85rem; color:#64748B; }
+    .practice-dashboard__legend{ display:flex; flex-direction:column; gap:.6rem; padding:1.05rem 1.2rem; border-radius:1.1rem; background:#fff; border:1px solid rgba(148,163,184,.25); box-shadow:0 14px 30px rgba(15,23,42,.1); }
+    .practice-dashboard__legend-title{ font-size:.88rem; font-weight:700; color:#0f172a; }
+    .practice-dashboard__legend-list{ list-style:none; padding:0; margin:0; display:grid; gap:.5rem; font-size:.82rem; color:#475569; }
+    .practice-dashboard__legend-item{ display:flex; align-items:center; gap:.55rem; }
+    .practice-dashboard__legend-dot{ width:.75rem; height:.75rem; border-radius:999px; background:#CBD5F5; box-shadow:0 0 0 4px rgba(203,213,225,.35); }
+    .practice-dashboard__legend-dot.is-ok{ background:var(--dashboard-status-ok-text); box-shadow:0 0 0 4px rgba(34,197,94,.22); }
+    .practice-dashboard__legend-dot.is-mid{ background:#f59e0b; box-shadow:0 0 0 4px rgba(250,204,21,.26); }
+    .practice-dashboard__legend-dot.is-ko{ background:#ef4444; box-shadow:0 0 0 4px rgba(248,113,113,.26); }
+    .practice-dashboard__legend-dot.is-na{ background:#94A3B8; box-shadow:0 0 0 4px rgba(148,163,184,.28); }
     .practice-dashboard__table-wrapper{
       position:relative;
       border:1px solid var(--dashboard-border);
@@ -627,8 +662,8 @@
     .practice-dashboard__cell:hover{ transform:translateY(-1px); box-shadow:0 6px 14px rgba(15,23,42,.12); border-color:rgba(148,163,184,.35); }
     .practice-dashboard__cell:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__hint{ font-size:.82rem; color:#475569; text-align:right; }
-    .practice-dashboard__chart-panel{ display:flex; flex-direction:column; gap:.9rem; }
-    .practice-dashboard__chart-scroll{ border-radius:1rem; overflow-x:auto; padding:.5rem; padding-bottom:.25rem; margin-bottom:-.25rem; cursor:grab; -webkit-overflow-scrolling:touch; touch-action:pan-y; scroll-snap-type:x proximity; background:#f8fafc; border:1px solid rgba(226,232,240,.9); box-shadow:inset 0 1px 0 rgba(255,255,255,.8); }
+    .practice-dashboard__chart-panel{ display:flex; flex-direction:column; gap:1rem; }
+    .practice-dashboard__chart-scroll{ border-radius:1.1rem; overflow-x:auto; padding:.55rem; padding-bottom:.25rem; margin-bottom:-.25rem; cursor:grab; -webkit-overflow-scrolling:touch; touch-action:pan-y; scroll-snap-type:x proximity; background:linear-gradient(135deg, rgba(241,245,249,.9) 0%, rgba(255,255,255,1) 60%); border:1px solid rgba(226,232,240,.85); box-shadow:inset 0 1px 0 rgba(255,255,255,.85); }
     .practice-dashboard__chart-scroll:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__chart-scroll.is-dragging{ cursor:grabbing; user-select:none; }
     .practice-dashboard__chart-scroll::-webkit-scrollbar{ height:10px; }
@@ -636,22 +671,26 @@
     .practice-dashboard__chart-scroll::-webkit-scrollbar-thumb{ background:#CBD5F5; border-radius:999px; }
     .practice-dashboard__chart-card{
       position:relative;
-      border:1px solid rgba(148,163,184,.2);
-      border-radius:1.1rem;
-      background:#fff;
-      padding:1.1rem 1.45rem 1.3rem;
-      min-height:300px;
-      box-shadow:0 12px 28px rgba(15,23,42,.08);
+      border:1px solid rgba(148,163,184,.22);
+      border-radius:1.15rem;
+      background:linear-gradient(180deg,#ffffff 0%,#f8fafc 100%);
+      padding:1rem 1.25rem 1.2rem;
+      min-height:240px;
+      box-shadow:0 16px 32px rgba(15,23,42,.1);
     }
-    .practice-dashboard__chart-card::before{ content:""; position:absolute; inset:0; border-radius:inherit; box-shadow:inset 0 1px 0 rgba(255,255,255,.75); pointer-events:none; }
-    .practice-dashboard__chart-canvas{ position:relative; min-height:280px; min-width:520px; }
+    .practice-dashboard__chart-card::before{ content:""; position:absolute; inset:0; border-radius:inherit; box-shadow:inset 0 1px 0 rgba(255,255,255,.8); pointer-events:none; }
+    .practice-dashboard__chart-canvas{ position:relative; min-height:220px; min-width:520px; }
     .practice-dashboard__chart-card canvas{ width:100%; height:100%; }
-    .practice-dashboard__chart-caption{ font-size:.85rem; color:#475569; }
-    .practice-dashboard__chart-controls{ display:flex; flex-wrap:wrap; gap:.6rem; align-items:center; margin-top:.35rem; }
-    .practice-dashboard__chart-zoom{ display:inline-flex; flex-wrap:wrap; gap:.4rem; align-items:center; padding:.4rem; border-radius:999px; background:#f1f5f9; border:1px solid rgba(148,163,184,.35); box-shadow:inset 0 1px 0 rgba(255,255,255,.6); margin-top:.15rem; }
-    .practice-dashboard__zoom-btn{ border:0; background:transparent; border-radius:999px; padding:.45rem .95rem; font-size:.82rem; font-weight:600; color:#1f2937; transition:background .15s ease,color .15s ease,box-shadow .15s ease; }
-    .practice-dashboard__zoom-btn:hover{ background:#e2e8f0; }
-    .practice-dashboard__zoom-btn.is-active{ background:var(--accent-600); color:#fff; box-shadow:0 10px 24px rgba(62,166,235,.35); cursor:default; }
+    .practice-dashboard__chart-caption{ font-size:.82rem; color:#475569; background:#fff; border-radius:.75rem; padding:.55rem .75rem; box-shadow:0 8px 18px rgba(15,23,42,.08); }
+    .practice-dashboard__chart-caption:empty{ display:none; }
+    .practice-dashboard__chart-actions{ display:flex; flex-wrap:wrap; align-items:flex-start; justify-content:space-between; gap:.85rem; padding-top:.9rem; border-top:1px solid rgba(226,232,240,.85); }
+    .practice-dashboard__chart-controls{ display:flex; flex-wrap:wrap; gap:.6rem; align-items:center; justify-content:flex-end; margin-top:0; flex:1 1 260px; }
+    .practice-dashboard__chart-zoom{ display:inline-flex; flex-wrap:wrap; gap:.35rem; align-items:center; padding:.35rem .4rem; border-radius:999px; background:#fff; border:1px solid rgba(148,163,184,.35); box-shadow:0 14px 32px rgba(15,23,42,.12); flex:0 0 auto; }
+    .practice-dashboard__zoom-btn{ border:1px solid rgba(148,163,184,.45); background:rgba(248,250,252,.9); border-radius:999px; padding:.45rem 1rem; font-size:.82rem; font-weight:600; color:#1f2937; transition:background .15s ease,color .15s ease,box-shadow .15s ease,border-color .15s ease; }
+    .practice-dashboard__zoom-btn:hover{ background:#e2e8f0; border-color:rgba(148,163,184,.65); }
+    .practice-dashboard__zoom-btn.is-active{ background:var(--accent-600); color:#fff; border-color:var(--accent-600); box-shadow:0 12px 26px rgba(62,166,235,.35); cursor:default; }
+    .practice-dashboard__footer{ margin-top:auto; padding-top:1rem; border-top:1px solid rgba(226,232,240,.9); display:flex; align-items:center; justify-content:flex-end; gap:.75rem; }
+    .practice-dashboard__footer-actions{ display:flex; gap:.6rem; }
     .practice-dashboard__filter{ display:flex; flex-direction:column; gap:.3rem; font-size:.78rem; color:#475569; }
     .practice-dashboard__filter-label{ font-weight:600; text-transform:uppercase; letter-spacing:.08em; color:#0f172a; }
     .practice-dashboard__filter-select{ border:1px solid #CBD5F5; border-radius:.8rem; padding:.4rem .7rem; font-size:.88rem; color:#0f172a; background:#fff; min-width:180px; box-shadow:0 6px 14px rgba(15,23,42,.08); }
@@ -677,34 +716,44 @@
     .practice-dashboard__empty{ padding:1.25rem; border-radius:1rem; border:1px dashed #CBD5F5; background:#F8FAFC; font-size:.9rem; color:#475569; text-align:center; }
     .practice-dashboard__empty-row{ padding:2rem 1rem; text-align:center; font-size:.9rem; color:#94A3B8; }
     @media (min-width: 1024px){
-      .practice-dashboard__body{ display:grid; grid-template-columns:minmax(0,0.95fr) minmax(0,1fr); gap:1.8rem; align-items:flex-start; }
-      .practice-dashboard__section--chart{ position:sticky; top:1.25rem; align-self:flex-start; }
+      .practice-dashboard__layout{ grid-template-columns:minmax(0,1.05fr) minmax(0,.95fr); gap:1.5rem; }
+      .practice-dashboard__section--chart{ height:100%; }
     }
     @media (max-width: 1024px){
       .practice-dashboard__card{ width:min(100%,calc(100vw - 1.5rem)); }
+      .practice-dashboard__layout{ grid-template-columns:1fr; }
     }
     @media (max-width: 768px){
       .practice-dashboard.goal-modal{ padding:0; align-items:stretch; }
       .practice-dashboard.goal-modal .practice-dashboard__card{ width:100%; max-height:100dvh; min-height:100dvh; border-radius:0; box-shadow:none; border:0; padding:1.35rem clamp(1rem,4vw,1.5rem) 1.6rem; }
       .practice-dashboard.goal-modal .practice-dashboard__card{ padding-top:calc(env(safe-area-inset-top,0) + 1.35rem); }
       .practice-dashboard__body{ padding-right:0; margin-right:0; gap:1.35rem; }
+      .practice-dashboard__layout{ gap:1.2rem; }
+      .practice-dashboard__aside{ order:-1; }
       .practice-dashboard__header{ flex-direction:column; align-items:flex-start; gap:.85rem; padding:.15rem 0 .85rem; border-bottom:1px solid rgba(226,232,240,.9); }
       .practice-dashboard__header-actions{ width:100%; flex-direction:column; align-items:stretch; gap:.6rem; justify-content:flex-start; padding-top:0; }
       .practice-dashboard__view-toggle{ width:100%; justify-content:space-between; }
       .practice-dashboard__view-btn{ flex:1 1 auto; text-align:center; }
       .practice-dashboard__filter-select{ width:100%; }
       .practice-dashboard__chart-panel{ gap:.75rem; }
-      .practice-dashboard__chart-card{ min-height:240px; padding:1rem 1.15rem 1.2rem; }
+      .practice-dashboard__chart-card{ min-height:220px; padding:.95rem 1.05rem 1.15rem; }
       .practice-dashboard__chart-canvas{ min-width:min(520px,100%); }
+      .practice-dashboard__chart-actions{ flex-direction:column; align-items:stretch; }
       .practice-dashboard__chart-zoom,
       .practice-dashboard__chart-controls{ flex-direction:column; align-items:stretch; gap:.45rem; }
       .practice-dashboard__chart-option{ justify-content:space-between; }
       .practice-dashboard__table-wrapper{ box-shadow:0 16px 28px rgba(15,23,42,.1); }
       .practice-dashboard__hint{ text-align:left; }
+      .practice-dashboard__footer{ flex-direction:column; align-items:stretch; gap:.65rem; }
+      .practice-dashboard__footer-actions{ justify-content:flex-end; }
     }
     @media (max-width: 640px){
       .practice-dashboard__title{ font-size:1.12rem; }
       .practice-dashboard__section-title{ font-size:.95rem; }
+      .practice-dashboard__subtitle{ font-size:.88rem; }
+      .practice-dashboard__summary{ grid-template-columns:1fr; }
+      .practice-dashboard__insight{ grid-template-columns:1fr; }
+      .practice-dashboard__insight-icon{ width:1.85rem; height:1.85rem; }
       .practice-dashboard__table-wrapper{ padding:0; background:transparent; border:0; box-shadow:none; overflow:visible; }
       .practice-dashboard__table-wrapper::after{ display:none; }
       .practice-dashboard__matrix{ width:100%; min-width:0; border-collapse:separate; border-spacing:0; }
